fixed some buttons and spacing

--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@ body {
 }
 
 .nav-link:hover {
-   background-color: blue;
+   background-color: rgb(255, 0, 0);
 }
 
 .active {
-    background-color: blue;
+    background-color: rgb(0, 0, 0);
 }
